Basic Transformer Implemented

--- a/research notebooks/extract_and_tokenize_dataset.ipynb
+++ b/research notebooks/extract_and_tokenize_dataset.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,114 +43,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(input_file, 'r') as file:\n",
-    "    for line in file:\n",
-    "        if 'Interaction:' in line and current_block:\n",
-    "            match = re.search(pattern, current_block, re.DOTALL)\n",
-    "            if match:\n",
-    "                input_text = match[1].strip()\n",
-    "                squared_amplitude = match[3].strip()\n",
-    "\n",
-    "                input_text = re.sub(r'\\bInteraction\\b', '', input_text)\n",
-    "                input_text = re.sub(r'\\bOffShell\\b', '', input_text)\n",
-    "                input_text = re.sub(r'\\bVertex\\b', '', input_text)\n",
-    "\n",
-    "                input_text = re.sub(r'e_\\w+_\\d+', 'e_[ID]', input_text)\n",
-    "                input_text = re.sub(r'p_\\d+', 'p_[ID]', input_text)\n",
-    "                input_text = re.sub(r'X_\\d+', 'X_[ID]', input_text)\n",
-    "\n",
-    "\n",
-    "                input_text = re.sub(r'gamma_{%.*?}', 'gamma_{...}', input_text)\n",
-    "\n",
-    "                input_text = re.sub(r'\\w+_{\\w+}', '[TENSOR]', input_text)\n",
-    "\n",
-    "                input_text = re.sub(r'\\((.*?)\\)', '(X)', input_text)   # Keep (X) for position terms\n",
-    "                input_text = re.sub(r'\\^\\((.*?)\\)', '^(*)', input_text) # Keep ^(*) for conjugates\n",
-    "\n",
-    "    \n",
-    "                input_text = re.sub(r'u_\\(\\*\\)', 'u_(*)', input_text)\n",
-    "                input_text = re.sub(r'v_\\(\\*\\)', 'v_(*)', input_text)\n",
-    "\n",
-    "\n",
-    "                input_text = re.sub(r'\\s+', ' ', input_text).strip()\n",
-    "\n",
-    "\n",
-    "                data.append({\n",
-    "                    'text': input_text,\n",
-    "                    'label': squared_amplitude\n",
-    "                })\n",
-    "\n",
-    "            current_block = \"\"\n",
-    "\n",
-    "        current_block += line\n",
-    "\n",
-    "    if current_block:\n",
-    "        match = re.search(pattern, current_block, re.DOTALL)\n",
-    "        if match:\n",
-    "            input_text = match[1].strip()\n",
-    "            squared_amplitude = match[3].strip()\n",
-    "\n",
-    "            input_text = re.sub(r'\\bInteraction\\b', '', input_text)\n",
-    "            input_text = re.sub(r'\\bOffShell\\b', '', input_text)\n",
-    "            input_text = re.sub(r'\\bVertex\\b', '', input_text)\n",
-    "\n",
-    "            input_text = re.sub(r'e_\\w+_\\d+', 'e_[ID]', input_text)\n",
-    "            input_text = re.sub(r'p_\\d+', 'p_[ID]', input_text)\n",
-    "            input_text = re.sub(r'X_\\d+', 'X_[ID]', input_text)\n",
-    "            input_text = re.sub(r'gamma_{%.*?}', 'gamma_{...}', input_text)\n",
-    "            input_text = re.sub(r'\\w+_{\\w+}', '[TENSOR]', input_text)\n",
-    "\n",
-    "            input_text = re.sub(r'\\((.*?)\\)', '(X)', input_text)\n",
-    "            input_text = re.sub(r'\\^\\((.*?)\\)', '^(*)', input_text)\n",
-    "\n",
-    "            input_text = re.sub(r'u_\\(\\*\\)', 'u_(*)', input_text)\n",
-    "            input_text = re.sub(r'v_\\(\\*\\)', 'v_(*)', input_text)\n",
-    "            input_text = re.sub(r'\\s+', ' ', input_text).strip()\n",
-    "\n",
-    "            data.append({\n",
-    "                'text': input_text,\n",
-    "                'label': squared_amplitude\n",
-    "            })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Processed 15552 samples.\n",
-      "                                                text  \\\n",
-      "0  e_[ID](X)^(*) e_[ID](X)^(*) to e_[ID](X) e_[ID...   \n",
-      "1  e_[ID](X)^(*) e_[ID](X)^(*) to e_[ID](X) e_[ID...   \n",
-      "2  e_[ID](X)^(*) e_[ID](X)^(*) to e_[ID](X) e_[ID...   \n",
-      "3  e_[ID](X)^(*) e_[ID](X)^(*) to e_[ID](X) e_[ID...   \n",
-      "4  e_[ID](X)^(*) e_[ID](X)^(*) to e_[ID](X) e_[ID...   \n",
-      "\n",
-      "                                               label  \n",
-      "0  2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-      "1  2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-      "2  2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-      "3  2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-      "4  8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n"
+      "First 5 data entries:\n",
+      "{'text': '', 'label': 'e_gam_239(X)^(*) e_del_219(X)^(*) to e_eps_36(X) e_eta_132(X) : Vertex V_1:e(X_2), e(X_4), OffShell A(V_1), Vertex V_0:e(X_1), e(X_3), OffShell A(V_0), : -1/2*i*e^2*gamma_{+%\\\\sigma_165,%gam_145,%gam_146}*gamma_{%\\\\sigma_165,%gam_147,%del_137}*e_{i_3,%gam_146}(p_1)_u*e_{k_3,%del_137}(p_2)_u*e_{l_3,%gam_145}(p_3)_u^(*)*e_{i_5,%gam_147}(p_4)_u^(*)/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_165 %%%gam_145_[STATE_ID]_[STATE_ID] %%%gam_146_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_165 %%%gam_147_[STATE_ID]_[STATE_ID] %%%del_137_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_146_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_137_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_145_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5', 'label': '%gam_147}(p_4)_u^(*)/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_172 %%%gam_162_[STATE_ID]_[STATE_ID] %%%del_144_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_172 %%%gam_163_[STATE_ID]_[STATE_ID] %%%gam_164_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_164_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_144_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_162_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5', 'label': '%gam_163}(p_4)_u^(*)/(m_e^2 + -s_23 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_293 %%%gam_358_[STATE_ID]_[STATE_ID] %%%gam_359_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_293 %%%gam_360_[STATE_ID]_[STATE_ID] %%%del_271_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_360_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_358_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_271_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5', 'label': '%gam_359}(p_1)_u/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_301 %%%gam_377_[STATE_ID]_[STATE_ID] %%%del_278_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_301 %%%gam_378_[STATE_ID]_[STATE_ID] %%%gam_379_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_378_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_377_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_278_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5', 'label': '%gam_379}(p_1)_u/(m_e^2 + -s_23 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame(data)\n",
+    "import re\n",
     "\n",
-    "df.to_csv(output_file, index=False)\n",
+    "data = []# Replace with your file path\n",
+    "current_block = \"\"\n",
     "\n",
-    "print(f\"✅ Processed {len(df)} samples.\")\n",
-    "print(df.head())\n"
+    "with open(input_file, 'r') as file:\n",
+    "    for line in file:\n",
+    "        # If your file has blocks with 'Interaction:', use block accumulation\n",
+    "        # Otherwise, treat as CSV line\n",
+    "        if 'Interaction:' in line and current_block:\n",
+    "            match = re.search(r'Interaction:(.*),(.*)', current_block, re.DOTALL)\n",
+    "            if match:\n",
+    "                input_text = match.group(1).strip()\n",
+    "                squared_amplitude = match.group(2).strip()\n",
+    "            else:\n",
+    "                current_block = line\n",
+    "                continue\n",
+    "        else:\n",
+    "            # Treat as CSV line, handle colon as separator\n",
+    "            match = re.search(r'(.*?)\\s*:\\s*(.*)', line.strip(), re.DOTALL)\n",
+    "            if match:\n",
+    "                input_text = match.group(1).strip()\n",
+    "                squared_amplitude = match.group(2).strip()\n",
+    "            else:\n",
+    "                current_block += line\n",
+    "                continue\n",
+    "\n",
+    "        # Cleaning steps for input_text\n",
+    "        # 1. Remove irrelevant terms\n",
+    "        input_text = re.sub(r'\\bInteraction\\b', '', input_text)\n",
+    "        input_text = re.sub(r'\\bOffShell\\b', '', input_text)\n",
+    "        input_text = re.sub(r'\\bVertex\\b', '', input_text)\n",
+    "\n",
+    "        # 2. Preserve state names and replace numeric IDs\n",
+    "        input_text = re.sub(r'(e|c|u|X)_(\\w+)_\\d+', r'\\1_\\2_[STATE_ID]', input_text)\n",
+    "\n",
+    "        # 3. Handle gamma terms (e.g., gamma_{+%\\sigma_8689,%gam_11966,%eps_1132})\n",
+    "        # Replace each %state_numeric with %state_[STATE_ID]\n",
+    "        input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
+    "        input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
+    "\n",
+    "        # 4. Clean tensor terms (e.g., e_{k_919,%del_8324} → e_{k_[STATE_ID],%del_[STATE_ID]})\n",
+    "        input_text = re.sub(r'(\\w+)_{(\\w+)_(\\d+),(%\\w+_\\d+)}', r'\\1_{\\2_[STATE_ID],\\4_[STATE_ID]}', input_text)\n",
+    "        input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
+    "        input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
+    "\n",
+    "        # 5. Clean parentheses and conjugates\n",
+    "        input_text = re.sub(r'\\((.*?)\\)', '(X)', input_text)\n",
+    "        input_text = re.sub(r'\\^\\((.*?)\\)', '^(*)', input_text)\n",
+    "\n",
+    "        # 6. Fix complex function calls\n",
+    "        input_text = re.sub(r'u_\\(\\*\\)', 'u_(*)', input_text)\n",
+    "        input_text = re.sub(r'v_\\(\\*\\)', 'v_(*)', input_text)\n",
+    "\n",
+    "        # 7. Remove colons (including double colons) between terms\n",
+    "        input_text = re.sub(r':+', ' ', input_text)\n",
+    "\n",
+    "        # 8. Remove trailing quotes and extra commas\n",
+    "        input_text = re.sub(r'[\"\\']', '', input_text)  # Remove quotes\n",
+    "        input_text = re.sub(r',+', ',', input_text)\n",
+    "        input_text = re.sub(r',\\s*', ' ', input_text)  # Replace \", \" with \" \"\n",
+    "        input_text = re.sub(r'\\s+', ' ', input_text).strip()\n",
+    "        input_text = re.sub(r'^,+|,+$', '', input_text)\n",
+    "\n",
+    "        # Cleaning for squared_amplitude (remove quotes, normalize spaces)\n",
+    "        squared_amplitude = re.sub(r'[\"\\']', '', squared_amplitude)\n",
+    "        squared_amplitude = re.sub(r'\\s+', ' ', squared_amplitude).strip()\n",
+    "\n",
+    "        # Append cleaned data\n",
+    "        data.append({\n",
+    "            'text': input_text,\n",
+    "            'label': squared_amplitude\n",
+    "        })\n",
+    "\n",
+    "        # Reset current_block if processing blocks\n",
+    "        if 'Interaction:' in line:\n",
+    "            current_block = line\n",
+    "        else:\n",
+    "            current_block = \"\"\n",
+    "\n",
+    "    # Handle the last block (if using block structure)\n",
+    "    if current_block:\n",
+    "        match = re.search(r'Interaction:(.*),(.*)', current_block, re.DOTALL)\n",
+    "        if match:\n",
+    "            input_text = match.group(1).strip()\n",
+    "            squared_amplitude = match.group(2).strip()\n",
+    "\n",
+    "            # Apply same cleaning steps\n",
+    "            input_text = re.sub(r'\\bInteraction\\b', '', input_text)\n",
+    "            input_text = re.sub(r'\\bOffShell\\b', '', input_text)\n",
+    "            input_text = re.sub(r'\\bVertex\\b', '', input_text)\n",
+    "            input_text = re.sub(r'(e|c|u|X)_(\\w+)_\\d+', r'\\1_\\2_[STATE_ID]', input_text)\n",
+    "            input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
+    "            input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
+    "            input_text = re.sub(r'(\\w+)_{(\\w+)_(\\d+),(%\\w+_\\d+)}', r'\\1_{\\2_[STATE_ID],\\4_[STATE_ID]}', input_text)\n",
+    "            input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
+    "            input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
+    "            input_text = re.sub(r'\\((.*?)\\)', '(X)', input_text)\n",
+    "            input_text = re.sub(r'\\^\\((.*?)\\)', '^(*)', input_text)\n",
+    "            input_text = re.sub(r'u_\\(\\*\\)', 'u_(*)', input_text)\n",
+    "            input_text = re.sub(r'v_\\(\\*\\)', 'v_(*)', input_text)\n",
+    "            input_text = re.sub(r':+', ' ', input_text)\n",
+    "            input_text = re.sub(r'[\"\\']', '', input_text)\n",
+    "            input_text = re.sub(r',+', ',', input_text)\n",
+    "            input_text = re.sub(r',\\s*', ' ', input_text)\n",
+    "            input_text = re.sub(r'\\s+', ' ', input_text).strip()\n",
+    "            input_text = re.sub(r'^,+|,+$', '', input_text)\n",
+    "\n",
+    "            squared_amplitude = re.sub(r'[\"\\']', '', squared_amplitude)\n",
+    "            squared_amplitude = re.sub(r'\\s+', ' ', squared_amplitude).strip()\n",
+    "\n",
+    "            data.append({\n",
+    "                'text': input_text,\n",
+    "                'label': squared_amplitude\n",
+    "            })\n",
+    "\n",
+    "# Debugging: Print first 5 entries\n",
+    "print(\"First 5 data entries:\")\n",
+    "for entry in data[:5]:\n",
+    "    print(entry)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to  ../QED_data/processed_dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "data = pd.DataFrame(data , columns= ['text' , 'label']) \n",
+    "data.to_csv(output_file , index = False)\n",
+    "print('Data saved to ' , output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
