--- a/research notebooks/prediction.ipynb
+++ b/research notebooks/prediction.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\DecoderKAN\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle \n",
-    "with open(r'../src/Dataloaders/train_loader.pkl', 'rb') as f:\n",
+    "with open(r'src/Dataloaders/train_loader.pkl', 'rb') as f:\n",
     "    train_loader = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,90 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[   1,  199,  204,   32,  123,   32, 2983,    5,   29,    6,  204,   32,\n",
-       "          147,   32, 2814,    5,   29,  138,  168,  106,  202,   32,  147,   32,\n",
-       "          105,  820,    5,   29,  138,  202,   32,  123,   32,  375,  191,    5,\n",
-       "           29,    6,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,   81,  188,  118,   32, 2188,    5,   29,    6,   81,  188,\n",
-       "          111,   32, 4083,    5,   29,    6,  168,  205,   32,   64,   32, 2239,\n",
-       "          443,    5,   29,    6,  106,  205,   32,  123,   32,  575,  403,    5,\n",
-       "           29,  138,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  193,   32,   24,    5,   29,    6,  106,   81,  188,  157,\n",
-       "           32,  214, 3412,    5,   29,    6,  168,  106,  193,   32,   24,    5,\n",
-       "           29,  138,  106,   81,  188,  157,   32,  214, 1654,    5,   29,    6,\n",
-       "            2,    2,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,   36,   32,  176,   32, 1280,    5,   29,  138,  106,  203,   32,\n",
-       "          198,   32, 2013,    5,   29,    6,  168,   81,  188,  157,   32, 1129,\n",
-       "          237,    5,   29,    6,   81,  188,  157,   32,  767,  160,    5,   29,\n",
-       "            6,    2,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,   34,   32,   64,   32,  313,    5,   29,  138,  106,  205,   32,\n",
-       "          123,   32,  480,    5,   29,    6,  168,  106,  193,   32,   24,    5,\n",
-       "           29,  138,  193,   32,   24,    5,   29,    6,    2,    2,    2,    2,\n",
-       "            2,    2,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  200,   32,  123,   32, 2743,    5,   29,    6,  200,   32,\n",
-       "          147,   32, 3544,    5,   29,  138,  168,  106,  201,   32,  123,   32,\n",
-       "          330,  153,    5,   29,  138,  201,   32,  147,   32,  334,  191,    5,\n",
-       "           29,    6,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  200,   32,  147,   32, 1738,    5,   29,    6,  200,   32,\n",
-       "           87,   32, 3200,    5,   29,  138,  168,   81,  188,  118,   32, 1165,\n",
-       "           89,    5,   29,    6,  106,   81,  188,  118,   32,  208,  681,    5,\n",
-       "           29,    6,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  203,   32,  176,   32,  249,  406,    5,   29,    6,  134,\n",
-       "           32,  198,   32,  190,  581,    5,   29,  138,  168,  106,  203,   32,\n",
-       "           64,   32, 1315,  237,    5,   29,  138,  134,   32,  123,   32, 1440,\n",
-       "          190,    5,   29,    6,    2,    2,    2,    2],\n",
-       "        [   1,   52,   32,  176,   32, 3189,    5,   29,  138,  106,  202,   32,\n",
-       "          198,   32, 3805,    5,   29,    6,  168,  134,   32,   64,   32,  407,\n",
-       "          160,    5,   29,    6,  106,  134,   32,  123,   32,  107,  372,    5,\n",
-       "           29,  138,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  134,   32,  147,   32, 4745,    5,   29,    6,  204,   32,\n",
-       "           87,   32,  137, 3060,    5,   29,  138,  168,  106,  134,   32,  198,\n",
-       "           32, 1100,  221,    5,   29,  138,  204,   32,   64,   32, 1312,  272,\n",
-       "            5,   29,    6,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  205,   32,  147,   32, 2518,    5,   29,    6,  205,   32,\n",
-       "          198,   32, 3605,    5,   29,  138,  168,  205,   32,   64,   32,  206,\n",
-       "          705,    5,   29,    6,  106,  205,   32,  123,   32, 1005,  274,    5,\n",
-       "           29,  138,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  200,   32,  147,   32, 2533,    5,   29,    6,  200,   32,\n",
-       "          198,   32, 4124,    5,   29,  138,  168,  200,   32,   64,   32,  208,\n",
-       "          108,    5,   29,    6,  106,  200,   32,   87,   32,  114,  418,    5,\n",
-       "           29,  138,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,   36,   32,  123,   32, 2549,    5,   29,  138,  106,  203,   32,\n",
-       "          147,   32, 2812,    5,   29,    6,  168,  202,   32,   64,   32,  302,\n",
-       "          150,    5,   29,    6,  106,  202,   32,  123,   32,  136,  374,    5,\n",
-       "           29,  138,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  134,   32,  147,   32, 2082,    5,   29,    6,  134,   32,\n",
-       "          198,   32, 3070,    5,   29,  138,  168,   81,  188,  126,   32,  208,\n",
-       "          425,    5,   29,    6,  106,   81,  188,  126,   32,  255,  416,    5,\n",
-       "           29,    6,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,   81,  188,  157,   32, 2103,    5,   29,    6,   81,  188,\n",
-       "          178,   32,  280,  105,    5,   29,    6,  168,  193,   32,   24,    5,\n",
-       "           29,    6,  106,  193,   32,   24,    5,   29,  138,    2,    2,    2,\n",
-       "            2,    2,    2,    2,    2,    2,    2,    2],\n",
-       "        [   1,  199,  193,   32,   24,    5,   29,    6,  193,   32,   24,    5,\n",
-       "           29,  138,  168,  106,  201,   32,  198,   32,  348,  236,    5,   29,\n",
-       "          138,  201,   32,  176,   32,  388,  214,    5,   29,    6,    2,    2,\n",
-       "            2,    2,    2,    2,    2,    2,    2,    2]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\DecoderKAN\\\\research notebooks'"
+       "'d:\\\\DecoderKAN'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,24 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d:\\DecoderKAN\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ../"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -171,10 +69,10 @@
      "text": [
       "Tokenizer loaded with vocab size: 512\n",
       "Pad token: None, EOS token: None\n",
-      "Model loaded on cpu from transformer_qed_sequence_test.pth\n",
+      "Model loaded on cpu from transformer_qed_sequence_full.pth\n",
       "Input text: AntiPart e_[ID](X) e_[ID](X)^(*) to s_eps_18941(X) AntiPart s_eta_22311(X)^(*)\n",
-      "Predicted token IDs: [1, 332, 259, 309, 136, 269, 377, 126, 114, 126, 358, 187, 115, 130, 422, 115, 130, 422, 115, 130, 422, 115, 130, 422, 115, 130, 422, 115, 130, 422, 115, 130, 422, 115, 130, 281, 197, 497, 204, 98, 71, 424, 145, 253]\n",
-      "Decoded output: [SEP] 129 96 216 19 *((- 158 igma Ġ2 igma 339 87 14 ert 176 14 ert 176 14 ert 176 14 ert 176 14 ert 176 14 ert 176 14 ert 176 14 ert 100 80 807 Ġd ĠV }( 307 ^(*)* Ġi\n"
+      "Predicted token IDs: [1, 5, 65, 33, 18, 103, 71, 49, 33, 14, 89, 54, 239, 46, 33, 38, 32, 15, 61, 135, 33, 90, 61, 140, 12, 15, 8, 94, 33, 95, 7, 110, 140, 12, 222, 8, 38, 32, 17, 104, 109, 8, 2, 8]\n",
+      "Decoded output: [SEP] % gam _ 5 33 }( p _ 1 )_ v ^(*)/( m _ e ^ 2 Ġ+ Ġs _ 12 Ġ+ Ġ1 / 2 * reg _ prop ) Ġ: Ġ1 / 36 * e ^ 4 *( 16 * [PAD] *\n"
      ]
     }
    ],
@@ -190,7 +88,7 @@
     "MAX_SEQ_LEN = 44\n",
     "\n",
     "# Load the tokenizer\n",
-    "tokenizer = PreTrainedTokenizerFast.from_pretrained(\"src/tokenizer/QED_TOKENIZER/\")\n",
+    "tokenizer = PreTrainedTokenizerFast.from_pretrained(\"src/tokenizer/QED_TOKENIZER\")\n",
     "print(f\"Tokenizer loaded with vocab size: {tokenizer.vocab_size}\")\n",
     "\n",
     "# Ensure padding and truncation settings\n",
@@ -204,11 +102,11 @@
     "\n",
     "# Load the saved model\n",
     "model = build_transformer(vocab_size=VOCAB_SIZE, d_model=512, num_heads=8)\n",
-    "checkpoint = torch.load(\"transformer_qed_sequence_test.pth\", map_location=DEVICE)\n",
+    "checkpoint = torch.load(\"transformer_qed_sequence_full.pth\", map_location=DEVICE)\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.to(DEVICE)\n",
     "model.eval()\n",
-    "print(f\"Model loaded on {DEVICE} from transformer_qed_sequence_test.pth\")\n",
+    "print(f\"Model loaded on {DEVICE} from transformer_qed_sequence_full.pth\")\n",
     "\n",
     "# Example input: Tokenize a physics interaction\n",
     "# Replace this string with your actual input (e.g., from your CSV)\n",
@@ -251,23 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[   1,  199,  204,   32,  123,   32, 2983,    5,   29,    6,  204,   32,\n",
-       "          147,   32, 2814,    5,   29,  138,  168,  106,  202,   32,  147,   32,\n",
-       "          105,  820,    5,   29,  138,  202,   32,  123,   32,  375,  191,    5,\n",
-       "           29,    6,    2,    2,    2,    2,    2,    2]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[0].unsqueeze(0)"
    ]
